# conspire

./: .releaserc  Dockerfile  GNUmakefile  README.md
.github/: copilot-instructions.md
.github/workflows/: main.yml
dashboard/: README.md  app.js  index.html  sample-stats.json  style.css
docs/: DEPLOYMENT.md
docs/landing-example/: index.html  room.js
front/: index.html  style.css
front/chat/: chat.js  index.html
server/: CMakeLists.txt
server/src/: App.cpp  AppComponent.hpp
server/src/controller/: StaticController.hpp
server/src/dto/: Config.hpp
utility/: install-oatpp-modules.sh
